[gd_scene load_steps=6 format=3 uid="uid://v0ghg53i3ob1"]

[ext_resource type="PackedScene" uid="uid://cd6accu57r5mt" path="res://UI/SkillBuilder/SkillBuilderGraph.tscn" id="1_hj656"]
[ext_resource type="Script" path="res://UI/SkillBuilder/skill_builder.gd" id="1_hoa47"]
[ext_resource type="Texture2D" uid="uid://dfmfp51bs8crq" path="res://assets/save.png" id="3_ohy1x"]
[ext_resource type="Texture2D" uid="uid://q1eaxhhe0u7k" path="res://assets/load.png" id="4_5s8ec"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hrunb"]
bg_color = Color(0.34902, 0.635294, 0.811765, 1)

[node name="SkillBuilder" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hoa47")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hrunb")

[node name="TabContainer" type="TabContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Skill 1" parent="PanelContainer/TabContainer" instance=ExtResource("1_hj656")]
layout_mode = 2

[node name="Skill 2" parent="PanelContainer/TabContainer" instance=ExtResource("1_hj656")]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -139.0
offset_bottom = 65.0
grow_horizontal = 0

[node name="SaveButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_ohy1x")
ignore_texture_size = true
stretch_mode = 4

[node name="LoadButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_5s8ec")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
